# django-eventcore

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
adr/: 0001-tooling-and-app-skeleton.md
eventcore/: apps.py
tests/: settings.py  test_smoke.py
