[project]
name = "django-eventcore"
version = "0.1.0.dev0"
description = "Outbox-backed domain events for Django, with CloudEvents on the wire and automatic OpenTelemetry trace propagation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.0,<6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "pytest-django",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["eventcore"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = "."
